fixed whitespace bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -69,7 +69,7 @@ header h2 {
 
 .main-nav ul {
     padding: 15px;
-    padding-left: 60px;
+    padding-left: 45px;
     margin: 0px;
 }
 
@@ -93,6 +93,10 @@ header h2 {
     margin-bottom: 40px;
     padding-bottom: 50px;
     padding-top: 60px;
+
+    /* prevents additional whitespace on right side due to Bootstrap row class */
+    padding-right: 0px;
+    margin-right: 0px;
 }
 
 .about-nav-scroll {
@@ -106,7 +110,7 @@ header h2 {
 /*WORK  */
 
 .work {
-    margin-bottom: 140px;
+    margin-bottom: 20px;
     padding-top: 20px;
 }
 
@@ -189,7 +193,7 @@ header h2 {
 
 .contact {
     padding: 35px;
-    padding-left: 60px;
+    padding-left: 45px;
 }
 
 .contact>h3 {
